--- a/Project Codes/Data Cleaning Scripts/Airbnb Reviews Data Cleaning.ipynb
+++ b/Project Codes/Data Cleaning Scripts/Airbnb Reviews Data Cleaning.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "sns.set(style='whitegrid', palette='pastel', color_codes=True)\n",
     "\n",
     "#Increase number of columns and rows displayed by Pandas\n",
-    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_columns', 100)\n",
     "pd.set_option('display.max_rows',100)\n",
     "\n",
     "#Ignore warnings\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,21 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 250,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "to_file() got an unexpected keyword argument 'path'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-a46fd497e20c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#Write profile to an HTML file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m profile.to_file(path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Pandas Reports',\n\u001b[1;32m---> 13\u001b[1;33m                 output_file=\"Airbnb Reviews Report.html\")\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m#View pandas profile for reviews data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: to_file() got an unexpected keyword argument 'path'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# #Create Pandas Profiling Report for reviews data\n",
     "# profile = reviews.profile_report(title='Airbnb Reviews Report', check_correlation_pearson= False, \n",
@@ -154,34 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#View missing values\n",
-    "print('Missing values: \\n', reviews.isna().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Original shape of reviews: (430766, 6)\n",
+      "\n",
       "Missing values: \n",
-      " comments         0\n",
-      "date             0\n",
-      "id               0\n",
-      "listing_id       0\n",
-      "reviewer_id      0\n",
-      "reviewer_name    1\n",
+      " comments         477\n",
+      "date               0\n",
+      "id                 0\n",
+      "listing_id         0\n",
+      "reviewer_id        0\n",
+      "reviewer_name      1\n",
       "dtype: int64\n"
      ]
     }
    ],
+   "source": [
+    "#Print current reviews shape\n",
+    "print('Original shape of reviews:', reviews.shape,end='\\n\\n')\n",
+    "\n",
+    "#Replace blank comments with NAN\n",
+    "reviews.comments.replace('^\\s*$', np.nan, regex=True, inplace=True)\n",
+    "\n",
+    "#View missing values\n",
+    "print('Missing values: \\n', reviews.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Remove rows with NA in comments\n",
     "reviews  = reviews[~reviews.comments.isna()]\n",
@@ -194,24 +190,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment Anomalies"
+    "**Comment Anomalies**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reviews data, as it is, does not contain review scores. This information is located within the listings dataset. In another notebook, we will merge the 2 datasets and perform an NLP analysis. \n",
+    "\n",
+    "In the meantime, there are a couple things we will want to check for before we can consider this data clean enough to run a text analysis on. Some of the things we need to check our comments for and consider removing are:\n",
+    "\n",
+    "- Short length comments\n",
+    "- New line, tabs, and rogue spaces\n",
+    "- Punctation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current shape of reviews: (429536, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Remove Punctuation\n",
+    "reviews.comments.replace('[^\\w\\s]+', '', regex=True, inplace=True)\n",
+    "\n",
+    "#Remove \\n,\\r and \\t\n",
+    "reviews.comments.replace('(\\\\n|\\\\t|\\\\r)', ' ',regex=True, inplace=True)\n",
+    "\n",
+    "#Replace new blank comments with NAN\n",
+    "reviews.comments.replace('^\\s*$', np.nan, regex=True, inplace=True)\n",
+    "\n",
+    "#Remove new rows with NA in comments\n",
+    "reviews  = reviews[~reviews.comments.isna()]\n",
+    "\n",
+    "#Strip trailing and leading whitespace\n",
+    "reviews['comments'].str.strip()\n",
+    "\n",
+    "#Remove rows where comments character string < 3\n",
+    "reviews = reviews[reviews.comments.apply(len) > 3].sort_values(by='comments')\n",
+    "\n",
+    "#Print current reviews shape\n",
+    "print('Current shape of reviews:', reviews.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Non-English Languages**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows containg non-English characters:  26064\n",
+      "Current shape of reviews: (403472, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check for strings that contain characters outside of ascii(latin) alphabet\n",
+    "def isEnglish(s):\n",
+    "    try:\n",
+    "        s.encode(encoding='utf-8').decode('ascii')\n",
+    "    except UnicodeDecodeError:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "#How many rows contain non-ascii characters?\n",
+    "print('Rows containg non-English characters: ',len(reviews[reviews.comments.apply(isEnglish) == False]))\n",
+    "\n",
+    "#Removing rows containing non-ascii characters\n",
+    "reviews = reviews[reviews.comments.apply(isEnglish) == True]\n",
+    "\n",
+    "#Print current reviews shape\n",
+    "print('Current shape of reviews:', reviews.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
     "# #Set path to write listings\n",
-    "# path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\12_23_2019_reviews_cleaned.csv'\n",
+    "# path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\12_24_2019_reviews_cleaned.csv'\n",
     "\n",
     "# #Write listings to path\n",
     "# reviews.to_csv(path)"
